[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/daily/interaction.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/hud.tscn" id="2"]

[node name="Interaction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.03, 0.02, 0.08, 1)

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 30.0
offset_top = 80.0
offset_right = 310.0
offset_bottom = 680.0
expand_mode = 1
stretch_mode = 5

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 340.0
offset_top = 70.0
offset_right = 1240.0
offset_bottom = 700.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "交流"

[node name="Separator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="BodyLabel" type="RichTextLabel" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 160)

[node name="OptionContainer" type="VBoxContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 38)
text = "戻る"

[node name="HUD" parent="." instance=ExtResource("2")]

[connection signal="pressed" from="Panel/VBox/BackButton" to="." method="_on_back_button_pressed"]
